fixed small screen not showing auth links

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -45,6 +45,11 @@
     font-weight: 800;
 }
 
-.course-info {
-    /* color: #666666; */
+@media only screen and (min-width: 768px) {
+    .small-screen-link {
+        display: none !important;
+    }
 }
+/* .small-screen-link {
+    display: none;
+} */
